--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,8 @@
 [submodule "dotbot"]
-	path = dotbot
-	url = https://github.com/anishathalye/dotbot
+   path = dotbot
+   url = https://github.com/anishathalye/dotbot
+
+[submodule ".vim/plugged/YouCompleteMe"]
+   path = .vim/plugged/YouCompleteMe
+   url = https://github.com/Valloric/YouCompleteMe
+   ignore = dirty
