--- a/.gitmodules
+++ b/.gitmodules
@@ -17,10 +17,10 @@
    url = https://github.com/SirVer/ultisnips
    ignore = dirty
 
-[submodule ".vim/plugged/vim-snippets"]
-   path = ./vim/plugged/vim-snippets
-   url = https://github.com/honza/vim-snippets
-   ignore = dirty
+# [submodule ".vim/plugged/vim-snippets"]
+#   path = ./vim/plugged/vim-snippets
+#   url = https://github.com/honza/vim-snippets
+#   ignore = dirty
 
 [submodule ".vim/plugged/vim-vinegar"]
    path = .vim/plugged/vim-vinegar
