--- a/.gitmodules
+++ b/.gitmodules
@@ -34,3 +34,6 @@
 [submodule "vim/plugged/vim-snippets"]
 	path = vim/plugged/vim-snippets
 	url = https://github.com/honza/vim-snippets
+[submodule "dracula-theme"]
+	path = dracula-theme
+	url = https://github.com/zenorocha/dracula-theme
