--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -7,7 +7,7 @@
     ~/.zshrc: .zshrc
     ./oh-my-zsh/custom:
        force: true
-       path: .oh-my-custom-zsh/custom/
+       path: .oh-my-custom-zsh/
 
 - shell:
   - [git submodule update --init --recursive, Installing submodules]
