--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -5,9 +5,10 @@
     ~/.vim: .vim/
     ~/.vimrc: .vimrc
     ~/.zshrc: .zshrc
-    ./oh-my-zsh/custom:
-       force: true
-       path: .oh-my-custom-zsh/
+    ./oh-my-zsh/custom: .oh-my-custom-zsh/
+#    ./oh-my-zsh/custom:
+#      force: true
+#      path: .oh-my-custom-zsh/
 
 - shell:
   - [git submodule update --init --recursive, Installing submodules]
