added neocomplete as submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -2,8 +2,12 @@
    path = dotbot
    url = https://github.com/anishathalye/dotbot
 
-[submodule "vim/plugged/vim-snippets"]
-   path = vim/plugged/vim-snippets
+[submodule ".vim/plugged/neocomplete"]
+   path = .vim/plugged/neocomplete
+   url = https://github.com/vim/Shougo/neocomplete
+
+[submodule ".vim/plugged/vim-snippets"]
+   path = .vim/plugged/vim-snippets
    url = https://github.com/honza/vim-snippets
 
 [submodule "dracula-theme"]
