--- a/.gitmodules
+++ b/.gitmodules
@@ -16,6 +16,17 @@
    url = https://github.com/zsh-users/zsh-syntax-highlighting
 
 # vim plugins
+# neocomplete - cached autocomplete
 [submodule ".vim/plugged/neocomplete"]
    path = .vim/plugged/neocomplete
    url = https://github.com/Shougo/neocomplete
+
+# auto-pair - pairs brackets, quotes, parantheses
+[submodule ".vim/plugged/auto-pairs"]
+   path = .vim/plugged/auto-pairs
+   url = https://github.com/jiangmiao/auto-pairs
+
+# comments/uncomments lines  
+[submodule ".vim/plugged/nerdcommenter"]
+   path = .vim/plugged/nerdcommenter
+   url = https://github.com/scrooloose/nerdcommenter
