--- a/.gitmodules
+++ b/.gitmodules
@@ -4,15 +4,14 @@
 
 [submodule "dracula-theme"]
    path = dracula-theme
-   url = https://github.com/zenorocha/dracula-theme
+   url = https://github.com/dracula/dracula-theme/
 
 [submodule "oh-my-zsh"]
    path = oh-my-zsh
-   url = https://github.com/robbyrussell/oh-my-zsh
-   ignore = dirty
+   url = https://github.com/ohmyzsh/ohmyzsh 
 
-[submodule ".oh-my-custom-zsh/plugins/zsh-syntax-highlighting"]
-   path = .oh-my-custom-zsh/plugins/zsh-syntax-highlighting
+[submodule "zsh-syntax-highlighting"]
+   path = zsh-syntax-highlighting
    url = https://github.com/zsh-users/zsh-syntax-highlighting
 
 # vim plugins
