--- a/.gitmodules
+++ b/.gitmodules
@@ -11,8 +11,8 @@
    url = https://github.com/ohmyzsh/ohmyzsh 
 
 [submodule "zsh-syntax-highlighting"]
-   path = zsh-syntax-highlighting
-   url = https://github.com/zsh-users/zsh-syntax-highlighting
+	path = zsh-syntax-highlighting
+	url = https://github.com/zsh-users/zsh-syntax-highlighting
 
 # vim plugins
 # neocomplete - cached autocomplete
@@ -33,3 +33,6 @@
 [submodule "ohmyzsh"]
 	path = ohmyzsh
 	url = https://github.com/ohmyzsh/ohmyzsh
+[submodule "zsh-notify"]
+	path = zsh-notify
+	url = https://github.com/marzocchi/zsh-notify
