--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -4,6 +4,8 @@
     ~/.vim: .vim/
     ~/.vimrc: .vimrc
     ~/.zshrc: .zshrc
-    ./oh-my-zsh/custom/jakerl.zsh-theme: .oh-my-custom-zsh/themes/jakerl.zsh-theme
+    ./ohmyzsh/custom/jakerl.zsh-theme: .oh-my-custom-zsh/themes/jakerl.zsh-theme
+    ./ohmyzsh/plugins/zsh-syntax-highlighting: zsh-syntax-highlighting
+    ./ohmyzsh/plugins/notify: zsh-notify
 
 - shell: []
