--- a/.gitmodules
+++ b/.gitmodules
@@ -2,10 +2,6 @@
    path = dotbot
    url = https://github.com/anishathalye/dotbot
 
-[submodule "dracula-theme"]
-	path = dracula-theme
-	url = https://github.com/dracula/dracula-theme/
-
 [submodule "oh-my-zsh"]
    path = oh-my-zsh
    url = https://github.com/ohmyzsh/ohmyzsh 
@@ -36,3 +32,9 @@
 [submodule "zsh-notify"]
 	path = zsh-notify
 	url = https://github.com/marzocchi/zsh-notify
+[submodule "terminal-app"]
+	path = terminal-app
+	url = https://github.com/dracula/terminal-app.git
+[submodule "FiraCode"]
+	path = FiraCode
+	url = https://github.com/tonsky/FiraCode
