--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -8,8 +8,8 @@
     ~/.vimrc: .vimrc
     ~/.zshrc: .zshrc
     ./ohmyzsh/custom/jakerl.zsh-theme: .oh-my-custom-zsh/themes/jakerl.zsh-theme
-    ./ohmyzsh/plugins/zsh-syntax-highlighting: zsh-syntax-highlighting
-    ./ohmyzsh/plugins/notify: zsh-notify
+    ./ohmyzsh/custom/plugins/zsh-syntax-highlighting: zsh-syntax-highlighting
+    ./ohmyzsh/custom/plugins/notify: zsh-notify
 
 - shell:
    - /usr/bin/ruby -e "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install)"
