--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "terminal-app"]
 	path = terminal-app
 	url = https://github.com/dracula/terminal-app.git
+[submodule "xcode"]
+	path = xcode
+	url = https://github.com/dracula/xcode/
