adding screensaver to instal

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -17,3 +17,4 @@
    - /usr/bin/ruby -e "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install)"
    - brew install terminal-notifier
    - brew install tmux
+   - brew cask install musaicfm
