--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -17,4 +17,7 @@
    - /usr/bin/ruby -e "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install)"
    - brew install terminal-notifier
    - brew install tmux
+   - brew install asdf
    - brew cask install musaicfm
+   - brew install openssl libyaml libffi
+   - asdf plugin-add ruby https://github.com/asdf-vm/asdf-ruby.git
